--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -385,7 +385,7 @@ $('#btn_new_game').click(function() {
 */
 $('#btn_join_game').click(function() {
 
-    loginJoinGame();
+    {{!-- loginJoinGame(); --}}
 
 });
 
