--- a/mobile/android/AtStake/app/src/main/res/layout/activity_web.xml
+++ b/mobile/android/AtStake/app/src/main/res/layout/activity_web.xml
@@ -11,47 +11,48 @@
     tools:context=".WebActivity">
 
     <WebView
+        android:id="@+id/webView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/webView"
-        android:layout_marginBottom="0dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:visibility="invisible"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:padding="0dp"
         android:layout_margin="0dp"
-        android:layout_marginEnd="0dp" />
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="0dp"
+        android:padding="0dp"
+        android:visibility="visible" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/newGame"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="41dp">
+        android:layout_marginBottom="41dp"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <Button
+            android:id="@+id/joinGame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Join Game"
-            android:id="@+id/joinGame"
             android:layout_below="@+id/button"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
+            android:text="Join Game"
             android:visibility="invisible" />
 
         <Button
+            android:id="@+id/newGame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Game"
-            android:id="@+id/newGame"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="188dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="188dp"
+            android:text="New Game"
             android:visibility="invisible" />
     </LinearLayout>
 
