--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -91,7 +91,6 @@
 	}
 }
 
-
 input.post-button {
 	position: fixed;
 	bottom: 0px;
@@ -101,8 +100,6 @@ input.post-button {
 	background-color: $turquoise-dark;
 	z-index: 1000;
 }
-
-
 
 .ended-container {
 	background-color: white;
@@ -146,17 +143,17 @@ input.post-button {
 	}
 }
 
-
-
-
 // Upper stages bar
 #stages-bar {
 	display: none;
+	background-color: $background-color;
 	text-align: justify;
   line-height: 0;
   top: 0px;
   height: 50px;
-  padding:8px;
+  padding-top:8px;
+  padding-left:0;
+  padding-right:0;
 
   &:after {
 	  content: "";
@@ -164,20 +161,27 @@ input.post-button {
 	  display: inline-block;
 	  vertical-align: bottom;
   }
-	
-	
 
   .icon {
     position: relative;
-	  display: inline-block;
+	  display: inline-table;
 	  vertical-align: middle;
 		z-index: 1;
 		text-align:center;
 
+		&:nth-child(1) {
+			margin-left: 10px;
+		}
+		&:nth-child(7) {
+			margin-right: 10px;
+		}
+
 		span {
 			display: flex;
+			color: $turquoise-dark;
 	    margin-top: 20%;
-	    font-size: 10px;
+	    font-size: 15px;
+	    font-family: 'AvenirNext-Bold';
 		}
 
 		img {
@@ -191,7 +195,9 @@ input.post-button {
 			animation-name: exit-stage;
 			animation-duration: 1s;
 			animation-fill-mode: forwards;
-
+			span {
+				display: none;
+			}
 		}
 		&:not(.disabled) {
 			animation-name: enter-stage;
@@ -382,41 +388,19 @@ input.post-button {
 // Speech bubbles
 blockquote.speech {
     position: relative;
+    text-align: justify;
+    width: 408px;
+    height: 287px;
     padding: 50px 30px;
-    margin: 1em 0 3em;
-    text-align: center;
+    margin: 1em 0 0;
     color: white;
-    background: $dark-sky-blue;
-    @include radius(35px);
     border-left: none;
+    background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1490215786/at-stake/layout/speech-bg.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
     p {
     	color: white;
     	font-family: $avenir-reg;
-    }
-    &:before {
-	    content: "";
-			position: absolute;
-	    z-index: 10;
-	    bottom: -25px;
-	    left: 190px;
-			width: 0;
-			height: 0;
-			border-left: 25px solid transparent;
-	    border-top: 26px solid $dark-sky-blue;
-	    border-right: 25px solid transparent;
-    }
-
-    // Duplicate for coloration on bottom
-    .under {
-    	position: absolute;
-	    top: -6px;
-	    left: 0;
-    	background: $cerulean;
-	    z-index: -1;
-	    border-left: none;
-	    &:before {
-		    border-top: 26px solid $cerulean;
-	    }
     }
 
     // Inactive player - hide this bubble
@@ -429,6 +413,7 @@ blockquote.speech {
   // "Next buttons"
   button {
     position: absolute;
+    color: $pink-red;
     display: flex;
     background: none;
     border: none;
@@ -441,7 +426,7 @@ blockquote.speech {
 	    left: 48px;
 	    width: 0;
 	    height: 0;
-	    border-left: 8px solid white;
+	    border-left: 8px solid $pink-red;
 	    border-top: 5px solid transparent;
 	    border-bottom: 5px solid transparent;
 	  }
@@ -469,7 +454,6 @@ footer#bottom-bar {
 		div {
 			display: inline-block;
 			text-align: center;
-
 		}
 		p {
 			font-size: 12px;
@@ -485,8 +469,8 @@ footer#bottom-bar {
 		}
 
 		span {
-		    color: white;
-		  }
+			color: white;
+	  }
 		#player-coins {
 			background-image: url('https://res.cloudinary.com/engagement-lab-home/image/upload/f_auto,w_60/v1486743650/at-stake/layout/coin_stroke.png');
 			height: 100px;
@@ -494,11 +478,6 @@ footer#bottom-bar {
 	    background-repeat: no-repeat;
 	    background-size: 50px 50px;
 	    background-position: center;
-
-			// span {
-		 //    color: white;
-
-		 //  }
 		}
 		#pot-coins {
 			background-image: url('https://res.cloudinary.com/engagement-lab-home/image/upload/f_auto,w_60/v1486743650/at-stake/layout/pot_stroke.png');
@@ -507,8 +486,6 @@ footer#bottom-bar {
 	    background-repeat: no-repeat;
 	    background-size: 50px 50px;
 	    background-position: center;
-
-			
 		}
 
 	}
@@ -521,13 +498,9 @@ footer#bottom-bar {
 	  padding-left: 2em;
 	  border-radius: 0px;
 	  text-align: right;
-	  // background-color: transparent;
   	background-repeat: no-repeat;
 	  box-shadow: 0px;
 	  border: 0px;
-	  // margin-left: -5px;
-
-
 
 	  &#btn-role-card {
 	  	background-image: url('/images/layout/rolecard-icon.svg');
