--- a/public/styles/_core/fonts.scss
+++ b/public/styles/_core/fonts.scss
@@ -31,7 +31,7 @@
 @include font-face(AvenirNext-UltraLight, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNextCondensed-UltraLight', null, null, woff2 woff eot ttf);
 @include font-face(AvenirNext-Medium, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-Medium', null, null, woff2 woff eot ttf);
 
-@include font-face(Aileron, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/Aileron', null, null, woff2 woff eot ttf);
+@include font-face(Aileron, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/Aileron-Regular', null, null, otf);
 
 
 $body-type: "AvenirNext-Medium", sans-serif;
