--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -38,12 +38,11 @@
             
         {{/ifeq}}
 
-        {{!-- <div class="hidden" id="resize">looks like you're doing some resizing...</div> --}}
-
         <div id="wrapper" class="{{#ifeq section 'homepage'}}home-wrap{{/ifeq}}">
 
             <div id="overlay" class="modal"></div>
 
+            {{!-- PRE-FILLED MODALS --}}
             <section id="error-disconnected" class="modal error-modal">
                 <div id="text" class="col-sm-8 col-centered">
                   <h1>Yikes! :-(</h1>
@@ -55,6 +54,13 @@
                 <div id="text" class="col-sm-10 col-xs-12 col-centered">
                   <h1>Ummm...</h1>
                   <h2>It looks like <span id="player"></span> got disconnected from the game! They have <span id="time">60s</span> to reconnect before the game ends!</h2>
+                </div>
+            </section>
+
+            <section id="error-private-mode" class="modal error-modal">
+                <div id="text" class="col-sm-10 col-xs-12 col-centered">
+                  <h1>Sorry!</h1>
+                  <h2>You cannot play in private/incognito browsing mode. Please try again in a non-private window or tab.</h2>
                 </div>
             </section>
 
