--- a/public/styles/_core/homepage.scss
+++ b/public/styles/_core/homepage.scss
@@ -333,6 +333,10 @@ a:hover{
 		}
 		.play-pic{
 			display: block;
+			@media(min-width: 1201px){
+				height: 300px;
+				width: auto;
+			}
 			@media(max-width: 1200px){
 				height: 300px;
 				width: auto;
@@ -358,7 +362,12 @@ a:hover{
 		top: 175px;
 		z-index: 1;
 		opacity: .75;
-	
+		
+		@media(min-width: 1201px){
+			top: 175px;
+			height: 250px;
+		}
+
 		@media(max-width: 1200px){
 			top: 175px;
 			height: 250px;
