Barebones UI for decision phase in place (while buggy), fix for issue where it was impossible in some case to move beyond pitch phase, fix for showHide helper, added ‘decider_next_disabled’ argument support for speech component.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -380,7 +380,7 @@ input.post-button {
 	}
 
   // Inactive player - hide this bubble
-  &.hidden {
+  &.hiding {
   	display: none;
   }
 }
@@ -404,7 +404,7 @@ blockquote.speech {
     }
 
     // Inactive player - hide this bubble
-    &.hidden {
+    &.hiding {
     	display: none;
     }
 }
