--- a/templates/partials/component/choice.hbs
+++ b/templates/partials/component/choice.hbs
@@ -4,7 +4,7 @@
 * @param {Bool} active_player - Show this choice dialog only for active player?
 
 --}}
-<div id="more-time-wrapper" class="{{showHide this}}" style="display:none">
+<div id="more-time-wrapper" class="{{showHide this}} modal" style="display:none">
 	<div class="form choice" id="more-time" >
 	  <h3>Pay {{config.extraTimeCost}} to continue pitching?</h3>
 	  <h4>Recieve an additional {{config.extraSeconds}} seconds of uninterrupted talking time.</h4>
